--- a/functions/test-db/json2/humanrightsdeclaration/templates/home.hbs
+++ b/functions/test-db/json2/humanrightsdeclaration/templates/home.hbs
@@ -7,3 +7,5 @@
 <p>Agree? Then please sign up to support the Scotland Declaration on Human Rights.</p>
 
 <p>You can help send a clear message to policy makers, the public and the world that Scotland is actively committed to equality and human rights.</p>
+
+<p><a href="/the-declaration" class="mdc-button mdc-button--raised">Read the declaration</a></p>
