--- a/functions/test-db/json2/humanrightsdeclaration/templates/humanrightsdeclaration.hbs
+++ b/functions/test-db/json2/humanrightsdeclaration/templates/humanrightsdeclaration.hbs
@@ -41,7 +41,8 @@
                         <section class="mdc-toolbar__section mdc-toolbar__section--align-start">
                             <span class="mdc-toolbar__title catalog-title">
                                 <a href="/" class="brand-logo" title="The Scotland Declaration on Human Rights">
-                                    <img src="https://storage.cloud.google.com/humanrightsdeclaration/SDHR-logo-RGB-TALL-LARGE.PNG" />
+                                    <img src="https://storage.cloud.google.com/humanrightsdeclaration/SDHR-logo-RGB-TALL-LARGE.PNG" class="brand-logo-mobile" />
+                                    <img src="https://storage.cloud.google.com/humanrightsdeclaration/SDHR-logo-RGB-WIDE-LARGE.PNG" class="brand-logo-desktop" />
                                 </a>
                             </span>
                         </section>
@@ -51,7 +52,7 @@
                                 <a class="mdc-tab" href="/the-declaration">The Declaration</a>
                                 <a class="mdc-tab" href="/why-sign">Why sign?</a>
                                 <a class="mdc-tab" href="/sign-up">Sign up</a>
-                                <a class="mdc-tab" href="/signatories">Signatories</a>
+                                <!-- <a class="mdc-tab" href="/signatories">Signatories</a> -->
                             </nav>
                             <!-- <button class="menu mdc-toolbar__icon mdc-toolbar__icon--menu" onclick="menu_draw.MDCTemporaryDrawer.open = true">
                                 <span class="fa fa-2x fa-bars" aria-hidden="true"></span>
