--- a/functions/test-db/json2/humanrightsdeclaration/templates/sign-up.hbs
+++ b/functions/test-db/json2/humanrightsdeclaration/templates/sign-up.hbs
@@ -5,3 +5,5 @@
 <p>Any organisation from the public, private or third sectors can sign their support for the Declaration. Big or small, old or new – as long as your organisation works in Scotland, you can sign. Even if your organisation does not usually talk about human rights or equality, please take this opportunity to add your support to the Scotland Declaration on Human Rights.</p>
 
 <p>Thank you – your support for equality and human rights is valued.</p>
+
+<iframe src="http://www.surveygizmo.eu/s3/90058214/humanrightsdeclaration" frameborder="0" width="100%" height="500" style="overflow:hidden"></iframe>
