--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -552,6 +552,7 @@ a:hover {
 }
 .mdc-temporary-drawer {
     .mdc-temporary-drawer__header-content {
+        direction: ltr;
         padding: $spacing-unit;
     }
     .mdc-temporary-drawer__header:before {
@@ -559,6 +560,7 @@ a:hover {
     }
     .mdc-list {
         .mdc-list-item {
+            direction: ltr;
             padding: 0 $spacing-unit;
         }
         .mdc-list-item__start-detail {
