--- a/functions/test-db/json2/humanrightsdeclaration/templates/why-sign.hbs
+++ b/functions/test-db/json2/humanrightsdeclaration/templates/why-sign.hbs
@@ -5,3 +5,5 @@
 <p>We want to send out a clear message to policy makers across the UK and beyond, that organisations in Scotland view equality and human rights as vital to our society.  We do not want these rights to be reduced.  Instead we want to see them strengthened and growing.  We want transparency and participation to underpin all discussions on legal rights.</p>
 
 <p>This is an opportunity for your organisation – whatever your cause or activity – to add your voice to the call for equality and human rights to be at the heart of Scottish society.</p>
+
+<p><a href="/sign-up" class="mdc-button mdc-button--raised">Sign the declaration</a></p>
