--- a/functions/test-db/json2/humanrightsdeclaration/templates/home.hbs
+++ b/functions/test-db/json2/humanrightsdeclaration/templates/home.hbs
@@ -4,7 +4,7 @@
 
 <p>We want equality and human rights to be at the heart of Scottish society.  Whatever the Brexit outcome, we want to protect our rights.  We want Scotland to be a world leader in rights protection and implementation.</p>
 
-<p>Agree? Then please sign up to support the Scotland Declaration on Human Rights.</p>
+<p>Agree? Then please <a href="/sign-up">sign up</a> to support the Scotland Declaration on Human Rights.</p>
 
 <p>You can help send a clear message to policy makers, the public and the world that Scotland is actively committed to equality and human rights.</p>
 
