--- a/functions/test-db/json2/humanrightsdeclaration/templates/humanrightsdeclaration.hbs
+++ b/functions/test-db/json2/humanrightsdeclaration/templates/humanrightsdeclaration.hbs
@@ -54,13 +54,32 @@
                                 <a class="mdc-tab" href="/sign-up">Sign up</a>
                                 <!-- <a class="mdc-tab" href="/signatories">Signatories</a> -->
                             </nav>
-                            <!-- <button class="menu mdc-toolbar__icon mdc-toolbar__icon--menu" onclick="menu_draw.MDCTemporaryDrawer.open = true">
+                            <button id="menu_button" class="menu mdc-toolbar__icon mdc-toolbar__icon--menu" onclick="menu_draw.MDCTemporaryDrawer.open = true">
                                 <span class="fa fa-2x fa-bars" aria-hidden="true"></span>
-                            </button> -->
+                            </button>
                         </section>
                     </div>
                 </div>
             </header>
+
+            <aside class="mdc-temporary-drawer" id="menu_draw" dir="rtl">
+                <nav class="mdc-temporary-drawer__drawer">
+                    <header class="mdc-temporary-drawer__header">
+                        <div class="mdc-temporary-drawer__header-content mdc-theme--text-primary-on-primary">
+                            <img src="https://storage.cloud.google.com/humanrightsdeclaration/SDHR-logo-RGB-TALL-LARGE.PNG" class="brand-logo-mobile" />
+                        </div>
+                    </header>
+                    <nav class="mdc-temporary-drawer__content mdc-list-group">
+                        <div id="icon-with-text-demo" class="mdc-list">
+                            <a class="mdc-list-item" href="/" data-mdc-tabindex-handled="true" tabindex="-1" onclick="menu_draw.MDCTemporaryDrawer.open = false">Home</a>
+                            <a class="mdc-list-item" href="/the-declaration" data-mdc-tabindex-handled="true" tabindex="-1" onclick="menu_draw.MDCTemporaryDrawer.open = false">The Declaration</a>
+                            <a class="mdc-list-item" href="/why-sign" data-mdc-tabindex-handled="true" tabindex="-1" onclick="menu_draw.MDCTemporaryDrawer.open = false">Why sign?</a>
+                            <a class="mdc-list-item" href="/sign-up" data-mdc-tabindex-handled="true" tabindex="-1" onclick="menu_draw.MDCTemporaryDrawer.open = false">Sign up</a>
+                            <!-- <a class="mdc-list-item" href="/signatories" data-mdc-tabindex-handled="true" tabindex="-1" onclick="menu_draw.MDCTemporaryDrawer.open = false">Signatories</a> -->
+                        </div>
+                    </nav>
+                </nav>
+            </aside>
 
             <main>
                 <div class="container-fluid">
