Fixed problems with CMS authors

--- a/functions/test-db/json2/scvo/templates/post-author-title.hbs
+++ b/functions/test-db/json2/scvo/templates/post-author-title.hbs
@@ -1,1 +1,1 @@
-SCVO – Posts by {{{primaryResponse.hits.hits.[0]._source.author_name_full}}}
+SCVO – Posts by {{{primaryResponse.hits.hits.[0]._source.name_full}}}
