--- a/functions/test-db/json2/scvo/templates/post-author.hbs
+++ b/functions/test-db/json2/scvo/templates/post-author.hbs
@@ -3,19 +3,15 @@
         <div class="splash-overlay{{#if primaryResponse.hits.hits.[0]._source.hide_overlay}} splash-overlay-hidden{{/if}}">
             <div class="container-fluid">
                 <div class="mdc-layout-grid">
-                    {{#if primaryResponse.hits.hits.[0]._source.header_text}}
-                    <img src="{{primaryResponse.hits.hits.[0]._source.header_text}}" alt="{{primaryResponse.hits.hits.[0]._source.title}}" class="header-text" />
-                    {{else}}
                     <h1 class="header-text">
                         <span class="header-text-banner">
-                            {{#if primaryResponse.hits.hits.[0]}}
-                            {{{primaryResponse.hits.hits.[0]._source.rendered.scvo_header}}}
+                            {{#if supplimentaryResponses.staff_profile.hits.hits.[0]}}
+                            {{{supplimentaryResponses.staff_profile.hits.hits.[0]._source.rendered.scvo_header}}}
                             {{else}}
-                            {{{supplimentaryResponses.author_profile.hits.hits.[0]._source.rendered.scvo_header}}}
+                            {{{primaryResponse.hits.hits.[0]._source.rendered.scvo_header}}}
                             {{/if}}
                         </span>
                     </h1>
-                    {{/if}}
                 </div>
             </div>
         </div>
@@ -34,10 +30,10 @@
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 sidebar post-sidebar">
                     <div class="author_about">
-                        {{#if primaryResponse.hits.hits.[0]}}
-                        {{{primaryResponse.hits.hits.[0]._source.rendered.scvo_profile}}}
-                        {{else}}
+                        {{#if supplimentaryResponses.author_profile.hits.hits.[0]}}
                         {{{supplimentaryResponses.author_profile.hits.hits.[0]._source.rendered.scvo_profile}}}
+                        {{else}}
+                        {{{primaryResponse.hits.hits.[0]._source.rendered.scvo_profile}}}
                         {{/if}}
                     </div>
                 </div>
