--- a/functions/test-db/json2/scvo/templates/post-category-title.hbs
+++ b/functions/test-db/json2/scvo/templates/post-category-title.hbs
@@ -1,6 +1,1 @@
-SCVO – Posts in
-{{#each primaryResponse.hits.hits.[0]._source.categories_slug}}
-{{#compare this "===" (lastItem (split ../params.path '_'))}}
-{{{lookup ../primaryResponse.hits.hits.[0]._source.categories @index}}}
-{{/compare}}
-{{/each}}
+SCVO – Posts in {{#each primaryResponse.hits.hits.[0]._source.categories_slug}}{{#compare this "===" (lastItem (split ../params.path '_'))}}{{{lookup ../primaryResponse.hits.hits.[0]._source.categories @index}}}{{/compare}}{{/each}}
