--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -809,6 +809,8 @@ a:hover {
 .blogs .page-sidebar .page-info,
 .policy-research.briefings-consultation-responses .mdc-card__actions,
 .policy-research.research .mdc-card__actions,
+.post.author .post-info-author,
+.blogs .mdc-card__actions,
 .press-media .mdc-card__actions,
 .press-media .sidebar h3.blogs {
     display: none;
