--- a/functions/test-db/json2/scvo/templates/post-author.hbs
+++ b/functions/test-db/json2/scvo/templates/post-author.hbs
@@ -30,8 +30,8 @@
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 sidebar post-sidebar">
                     <div class="author_about">
-                        {{#if supplimentaryResponses.author_profile.hits.hits.[0]}}
-                        {{{supplimentaryResponses.author_profile.hits.hits.[0]._source.rendered.scvo_profile}}}
+                        {{#if supplimentaryResponses.staff_profile.hits.hits.[0]}}
+                        {{{supplimentaryResponses.staff_profile.hits.hits.[0]._source.rendered.scvo_profile}}}
                         {{else}}
                         {{{primaryResponse.hits.hits.[0]._source.rendered.scvo_profile}}}
                         {{/if}}
