Menu now closes on click

--- a/functions/test-db/json2/scvo/templates/scvo.hbs
+++ b/functions/test-db/json2/scvo/templates/scvo.hbs
@@ -88,12 +88,12 @@
                         <div id="icon-with-text-demo" class="mdc-list">
                             <a class="mdc-list-item" href="/">Home</a>
                             {{#each menus.main}}
-                            <a class="mdc-list-item" href="{{path}}" data-mdc-tabindex-handled="true" tabindex="-1" onclick="menu_draw.MDCTemporaryDrawer.open = false">
+                            <a class="mdc-list-item" href="{{path}}" data-mdc-tabindex-handled="true" tabindex="-1" onclick="window.drawer.open = false">
                                 {{{label}}}
                             </a>
                             {{/each}}
                             {{#each menus.upper}}
-                            <a class="mdc-list-item" href="{{path}}" data-mdc-tabindex-handled="true" tabindex="-1" onclick="menu_draw.MDCTemporaryDrawer.open = false">
+                            <a class="mdc-list-item" href="{{path}}" data-mdc-tabindex-handled="true" tabindex="-1" onclick="window.drawer.open = false">
                                 {{{label}}}
                             </a>
                             {{/each}}
