--- a/functions/test-db/json2/digitalparticipation/templates/digitalparticipation.hbs
+++ b/functions/test-db/json2/digitalparticipation/templates/digitalparticipation.hbs
@@ -22,7 +22,7 @@
     <meta name="msapplication-TileColor" content="#00838f">
     <meta name="msapplication-TileImage" content="/assets/icons/ms-icon-144x144.png">
     <meta name="theme-color" content="#00838f">
-    <link rel="search" type="application/opensearchdescription+xml" title="Scotland's Digital Participation Charter" href="/assets/opensearch.xml" />
+    <link rel="search" type="application/opensearchdescription+xml" title="Good HQ" href="/assets/opensearch.xml" />
     <link type="text/css" rel="stylesheet" href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css">
     <style type="text/css">
     {{{this.css}}}
@@ -35,32 +35,59 @@
 <body class="{{replace route.params.path '_' ' '}}">
     <scvo-site>
         <div class="mdc-typography">
-            <header class="mdc-toolbar mdc-toolbar--fixed">
-                <div class="mdc-toolbar__row">
-                    <div class="container-fluid">
-                        <section class="mdc-toolbar__section mdc-toolbar__section--align-start">
-                            <button class="menu mdc-toolbar__icon mdc-toolbar__icon--menu" onclick="menu_draw.MDCTemporaryDrawer.open = true">
-                                <span class="fa fa-2x fa-bars" aria-hidden="true"></span>
-                            </button>
-                            <span class="mdc-toolbar__title catalog-title">
-                                <a href="/" class="brand-logo" title="SCVO">
-                                    <img src="assets/images/scvo-logo.png" />
-                                </a>
-                            </span>
-                        </section>
-                        <section class="mdc-toolbar__section mdc-toolbar__section--align-end toolbar-search">
-                            <nav id="upper-tab-bar" class="mdc-tab-bar">
-                                <a class="mdc-tab" href="/signin">Sign in</a>
-                                <a class="mdc-tab" href="/signup">Sign up</a>
-                                <a class="mdc-tab" href="/about">About</a>
-                            </nav>
-                        </section>
+            <main>
+                <header class="mdc-toolbar">
+                    <div class="mdc-toolbar__row">
+                        <div class="container-fluid">
+                            <section class="mdc-toolbar__section mdc-toolbar__section--align-start">
+                                <span class="mdc-toolbar__title catalog-title">
+                                    <a href="/" class="brand-logo">
+                                        <span class="digital">Digital</span>
+                                        <span class="participation">Participation</span>
+                                        <span class="charter">Charter</span>
+                                    </a>
+                                </span>
+                            </section>
+                            <section class="mdc-toolbar__section mdc-toolbar__section--align-end">
+                                <nav id="main-tab-bar" class="mdc-tab-bar">
+                                    <a class="mdc-tab" href="/">Home</a>
+                                    <a class="mdc-tab" href="/sign-up">Sign Up</a>
+                                    <a class="mdc-tab" href="/skill-up">Skill Up</a>
+                                    <a class="mdc-tab" href="/the-charter">The Charter</a>
+                                    <a class="mdc-tab" href="/stories">Stories</a>
+                                    <a class="mdc-tab" href="/signatories">Signatories</a>
+                                    <a class="mdc-tab" href="/resources">Resources</a>
+                                </nav>
+                                <button id="menu_button" class="menu mdc-toolbar__icon mdc-toolbar__icon--menu" onclick="menu_draw.MDCTemporaryDrawer.open = true">
+                                    <span class="fa fa-2x fa-bars" aria-hidden="true"></span>
+                                </button>
+                            </section>
+                        </div>
                     </div>
-                </div>
-            </header>
+                </header>
 
-            <main class="mdc-toolbar-fixed-adjust">
-                <div class="page-content">
+                <aside class="mdc-temporary-drawer" id="menu_draw" dir="rtl">
+                    <nav class="mdc-temporary-drawer__drawer">
+                        <header class="mdc-temporary-drawer__header">
+                            <div class="mdc-temporary-drawer__header-content mdc-theme--text-primary-on-primary">
+
+                            </div>
+                        </header>
+                        <nav class="mdc-temporary-drawer__content mdc-list-group">
+                            <div id="icon-with-text-demo" class="mdc-list">
+                                <a class="mdc-list-item" href="/" data-mdc-tabindex-handled="true" tabindex="-1" onclick="menu_draw.MDCTemporaryDrawer.open = false">Home</a>
+                                <a class="mdc-list-item" href="/sign-up" data-mdc-tabindex-handled="true" tabindex="-1" onclick="menu_draw.MDCTemporaryDrawer.open = false">Sign up</a>
+                                <a class="mdc-list-item" href="/skill-up" data-mdc-tabindex-handled="true" tabindex="-1" onclick="menu_draw.MDCTemporaryDrawer.open = false">Skill Up</a>
+                                <a class="mdc-list-item" href="/the-charter" data-mdc-tabindex-handled="true" tabindex="-1" onclick="menu_draw.MDCTemporaryDrawer.open = false">The Charter</a>
+                                <a class="mdc-list-item" href="/stories" data-mdc-tabindex-handled="true" tabindex="-1" onclick="menu_draw.MDCTemporaryDrawer.open = false">Stories</a>
+                                <a class="mdc-list-item" href="/signatories" data-mdc-tabindex-handled="true" tabindex="-1" onclick="menu_draw.MDCTemporaryDrawer.open = false">Signatories</a>
+                                <a class="mdc-list-item" href="/resources" data-mdc-tabindex-handled="true" tabindex="-1" onclick="menu_draw.MDCTemporaryDrawer.open = false">Resources</a>
+                            </div>
+                        </nav>
+                    </nav>
+                </aside>
+
+                <div class="container-fluid">
                     <router-outlet>{{{route.rendered}}}</router-outlet>
                 </div>
             </main>
@@ -68,52 +95,31 @@
             <footer>
                 <div class="footer">
                     <div class="container-fluid">
-                        <div class="footer-main">
-                            <div class="mdc-layout-grid">
-                                <div class="mdc-layout-grid__inner">
-                                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7-desktop mdc-layout-grid__cell--span-5-tablet">
-                                        <a href="/" class="brand-logo" title="SCVO">
-                                            <img src="assets/images/scvo-logo.png" />
-                                        </a>
-                                        <p>Scotland's Digital Participation Charter</p>
-                                    </div>
-                                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1-desktop mdc-layout-grid__cell--span-1-tablet">
-                                        &nbsp;
-                                    </div>
-                                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-3-tablet">
-                                        <ul class="mdc-list">
-                                            <li class="mdc-list-item"><a href=""></a></li>
-                                        </ul>
-                                    </div>
-                                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-3-tablet">
-                                        <ul class="mdc-list">
-                                            <li class="mdc-list-item">
-                                                <a href="mailto:enquiries@scvo.org.uk">
-                                                </a>
-                                            </li>
-                                            <li class="mdc-list-item">
-                                                <a href="tel:+441314748000">
-                                                </a>
-                                            </li>
-                                            <li class="mdc-list-item">
-                                                <a href="https://www.facebook.com/SCVO1939">
-                                                </a>
-                                            </li>
-                                            <li class="mdc-list-item">
-                                                <a href="https://twitter.com/scvotweet">
-                                                </a>
-                                            </li>
-                                        </ul>
-                                    </div>
+                        <div class="footer-main mdc-layout-grid">
+                            <div class="mdc-layout-grid__inner">
+                                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 description">
+                                    <p>
+                                        Scotland's Digital Participation Charter is built and managed by the <a href="http://scvo.org">Scottish Council for Voluntary Organisations</a> with support from the <a href="http://gov.scot">Scottish Government</a>.
+                                    </p>
+                                    <p>
+                                        <a href="/contact-us">Contact us</a> |
+                                        <a href="/accessibility">Accessibility</a> |
+                                        <a href="/privacy-and-cookies">Privacy &amp; cookies policy</a> |
+                                        <a href="/terms-and-conditions">Terms &amp; conditions</a>
+                                    </p>
                                 </div>
-                            </div>
-                            <div class="footer-copyright">
-                                <div class="row">
-                                    <div class="col-sm-12">
-                                        <p>
-                                            &copy; 2017. The Scottish Council for Voluntary Organisations (SCVO) is a Scottish Charitable Incorporated Organisation. Charity registered in Scotland <a href="http://www.oscr.org.uk/charities/search-scottish-charity-register/charity-details?number=SC003558">SC003558</a>.
-                                        </p>
-                                    </div>
+                                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop">
+                                    <p class="white-text copyright">
+                                        <small>&copy; {{moment now "YYYY"}}. The Scottish Council for Voluntary Organisations (SCVO) is a Scottish Charitable Incorporated Organisation.<br />Charity registered in Scotland <a href="http://www.oscr.org.uk/charities/search-scottish-charity-register/charity-details?number=SC003558">SC003558</a>.</small>
+                                    </p>
+                                </div>
+                                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
+                                    <a href="http://gov.scot/Topics/Economy/digital">
+                                        <img src="assets/images/digital-scotland.png" alt="Digital Scotland" class="logo digital-scotland" />
+                                    </a>
+                                    <a href="http://scvo.org">
+                                        <img src="assets/images/scvo-logo.png" alt="Scottish Council for Voluntary Organisations" class="logo scvo" />
+                                    </a>
                                 </div>
                             </div>
                         </div>
